--- a/page1.html
+++ b/page1.html
@@ -36,9 +36,9 @@
                     <p>住みやすい気候とほどよい都会感が心地良い街。</p>
                     <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まっている。</p>
                     <div class="img3">
-                        <img src="./aseets/img/kumano.JPG" alt="kumano">
-                        <img src="./aseets/img/flower.JPG" alt="flower">
-                        <img src="./aseets/img/aokinomori2.JPG" alt="aokinomori">
+                        <div class="img" id="img1">text</div>
+                        <div class="img" id="img2"></div>
+                        <div class="img" id="img3"></div>
                     </div>
                 </div>
             </div>
