--- a/page1.html
+++ b/page1.html
@@ -36,19 +36,27 @@
                     <p>住みやすい気候とほどよい都会感が心地良い街。</p>
                     <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まっている。</p>
                     <div class="img3">
-                        <div class="img" id="img1">text</div>
-                        <div class="img" id="img2"></div>
-                        <div class="img" id="img3"></div>
+                        <div class="img" id="img1">
+                            <img src="./aseets/img/kumano.JPG" alt="kumano">
+                        </div>
+                        <div class="img" id="img2">
+                            <img src="./aseets/img/flower.JPG" alt="flower">
+                        </div>
+                        <div class="img" id="img3">
+                            <img src="./aseets/img/aokinomori2.JPG" alt="aokinomori">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="page1-contents">
+        <div class=" page1-contents">
             <div class="container">
                 <h2>h2 title</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, earum. Consectetur, quaerat.
-                    Placeat consectetur fugiat quae ipsa eligendi assumenda natus odio quo voluptates officia, dolor
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, earum.
+                    Consectetur, quaerat.
+                    Placeat consectetur fugiat quae ipsa eligendi assumenda natus odio quo voluptates
+                    officia, dolor
                     esse modi dolorem perferendis nostrum.</p>
             </div>
         </div>
