imgファイル圧縮、img部分微調整

--- a/page1.html
+++ b/page1.html
@@ -34,16 +34,16 @@
                     <h2>Shizuoka City</h2>
                     <p>静岡市−それは、高校卒業までの18年間を過ごした大切な故郷。</p>
                     <p>住みやすい気候とほどよい都会感が心地良い街。</p>
-                    <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まっている。</p>
+                    <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まってる。</p>
                     <div class="img3">
                         <div class="img" id="img1">
-                            <img src="./aseets/img/kumano.JPG" alt="kumano">
+                            <img src="./aseets/img/kumano-com.JPG" alt="kumano">
                         </div>
                         <div class="img" id="img2">
-                            <img src="./aseets/img/flower.JPG" alt="flower">
+                            <img src="./aseets/img/flower-com.JPG" alt="flower">
                         </div>
                         <div class="img" id="img3">
-                            <img src="./aseets/img/aokinomori2.JPG" alt="aokinomori">
+                            <img src="./aseets/img/aokinomori2-com.JPG" alt="aokinomori">
                         </div>
                     </div>
                 </div>
