ページの追加

--- a/page4.html
+++ b/page4.html
@@ -23,8 +23,10 @@
             </ul>
         </div>
     </div>
-    <div class="main">
-        <p>ここはpage2</p>
+
+    <div class="main top">
+
+
     </div>
 
 
