--- a/page1.html
+++ b/page1.html
@@ -17,10 +17,10 @@
             <ul>
                 <li><a href="./page1.html">HOME TOWN</a></li>
                 <li><a href="./page2.html">HOBBY</a></li>
-                <li><a href="#">PROGRAMMING</a></li>
-                <li><a href="#">項目4</a></li>
-                <li><a href="#">項目5</a></li>
-                <li><a href="#">項目6</a></li>
+                <li><a href="./page3.html">PROGRAMMING</a></li>
+                <li><a href="./page4.html">BLOG</a></li>
+                <li><a href="./page5.html">項目5</a></li>
+                <li><a href="./page6.html">項目6</a></li>
             </ul>
         </div>
     </div>
