page1からサイドメニューを削除、修正

--- a/page1.html
+++ b/page1.html
@@ -11,54 +11,41 @@
 </head>
 
 <body>
-    <div class="side">
-        <h1><a href="./index.html">web site</a></h1>
-        <div class="side-list">
-            <ul>
-                <li><a href="./page1.html">HOME TOWN</a></li>
-                <li><a href="./page2.html">HOBBY</a></li>
-                <li><a href="./page3.html">PROGRAMMING</a></li>
-                <li><a href="./page4.html">BLOG</a></li>
-                <li><a href="./page5.html">項目5</a></li>
-                <li><a href="./page6.html">項目6</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="main">
-        <div class="fixed-bg bg-top">
-            <div class="page1-title">
+    <div class="fixed-bg bg-top">
+        <div class="page1-title">
+            <div class="container80 title">
                 <h1>HOME TOWN</h1>
             </div>
-            <div class="page1-text">
-                <div class="container">
-                    <h2>Shizuoka City</h2>
-                    <p>静岡市−それは、高校卒業までの18年間を過ごした大切な故郷。</p>
-                    <p>住みやすい気候とほどよい都会感が心地良い街。</p>
-                    <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まってる。</p>
-                    <div class="img3">
-                        <div class="img" id="img1">
-                            <img src="./aseets/img/kumano-com.JPG" alt="kumano">
-                        </div>
-                        <div class="img" id="img2">
-                            <img src="./aseets/img/flower-com.JPG" alt="flower">
-                        </div>
-                        <div class="img" id="img3">
-                            <img src="./aseets/img/aokinomori2-com.JPG" alt="aokinomori">
-                        </div>
+        </div>
+        <div class="page1-text">
+            <div class="container80">
+                <h2>Shizuoka City</h2>
+                <p>静岡市−それは、高校卒業までの18年間を過ごした大切な故郷。</p>
+                <p>住みやすい気候とほどよい都会感が心地良い街。</p>
+                <p>自分の家や通っていた学校、塾にだけじゃなくて、近所の公園や、スーパー、コンビニにもたくさんの思い出が詰まってる。</p>
+                <div class="img3">
+                    <div class="img" id="img1">
+                        <img src="./aseets/img/kumano-com.JPG" alt="kumano">
+                    </div>
+                    <div class="img" id="img2">
+                        <img src="./aseets/img/flower-com.JPG" alt="flower">
+                    </div>
+                    <div class="img" id="img3">
+                        <img src="./aseets/img/aokinomori2-com.JPG" alt="aokinomori">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class=" page1-contents">
-            <div class="container">
-                <h2>h2 title</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, earum.
-                    Consectetur, quaerat.
-                    Placeat consectetur fugiat quae ipsa eligendi assumenda natus odio quo voluptates
-                    officia, dolor
-                    esse modi dolorem perferendis nostrum.</p>
-            </div>
+    <div class="page1-contents">
+        <div class="container80">
+            <h2>h2 title</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, earum.
+                Consectetur, quaerat.
+                Placeat consectetur fugiat quae ipsa eligendi assumenda natus odio quo voluptates
+                officia, dolor
+                esse modi dolorem perferendis nostrum.</p>
         </div>
     </div>
 
