--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="main top">
-        <div class="container">
+        <div class="container90">
             <div class="box-wrapper">
                 <div class="box-line">
                     <div class="box">
